--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -1,5 +1,6 @@
 
 .slide0 {
+	z-index: 20; // put in front of progress bar
 	height: 100vh;
 	min-height: 0;
 	padding: 0;
@@ -8,7 +9,6 @@
 
 	.container {
 		@include centerMe();
-		// padding-top: 20vh;
 		text-align: right;
 	}
 }
